--- a/products/products.html
+++ b/products/products.html
@@ -8,24 +8,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../common/reset.css">
     <link rel="stylesheet" href="../common/main.css">
-    <link rel="stylesheet" href="styles/products.css">
+    <link rel="stylesheet" href="../styles/products.css">
     <title>Document</title>
 </head>
 
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png"/>
+            <img src="../assets/big-logo.png"/>
         </div>
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png"/>
+            <img class="header-image" src="../assets/alchemy-logo.png"/>
             <h2>
                 Products
             </h2>
             <nav><a href="../index.html">Home</a></nav>
-
+        </section>
+        <section>
+            <ul class="products-list">
+                <li class="list-item">
+                    <p class="product-id">ID: 1</p>
+                    <p class="product-name">Fluffel</p>
+                    <img src="../assets/images/mm-1.jpg" alt="fluffel flower">
+                    <p class="product-description">The fluffel is very rare etc etc longer description</p>
+                    <p class="product-magic">Magic? Yes.</p>
+                    <p class="product-danger-level">Danger Level: Keep the dome on at all times.</p>
+                    <button id="1" class="product-price">€10</button>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
