--- a/products/products.html
+++ b/products/products.html
@@ -30,12 +30,12 @@
             <ul class="products-list">
                 <li class="list-item">
                     <p class="product-id">ID: 1</p>
-                    <p class="product-name">Fluffel</p>
-                    <img src="../assets/images/mm-1.jpg" alt="fluffel flower">
-                    <p class="product-description">The fluffel is very rare etc etc longer description</p>
-                    <p class="product-magic">Magic? Yes.</p>
-                    <p class="product-danger-level">Danger Level: Keep the dome on at all times.</p>
-                    <button id="1" class="product-price">€10</button>
+                    <p class="product-name">Crested Fluffel</p>
+                    <img src="../assets/images/crested-fluffel.jpg" alt="crested fluffel flower">
+                    <p class="product-description">The Crested Fluffel is very rare.</p>
+                    <p class="product-magic">Fragrant? Yes.</p>
+                    <p class="product-safety">Safety notes: Sniff in moderation.</p>
+                    <button value="1" class="product-price">€10</button>
                 </li>
             </ul>
         </section>
