begins item render function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./common/reset.css">
     <link rel="stylesheet" href="./common/main.css">
     <link rel="stylesheet" href="styles/home.css">
-    <title>Document</title>
+    <title>Plant Shop</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <h2>
                 Flower Shop
             </h2>
-            <nav><a href="./products/products.html">Products</a></nav>
+            <nav><a href="./Items/Items.html">Items</a></nav>
             <content>
 
             </content>
