--- a/items/items.html
+++ b/items/items.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../common/reset.css">
     <link rel="stylesheet" href="../common/main.css">
-    <link rel="stylesheet" href="../styles/products.css">
+    <link rel="stylesheet" href="../styles/items.css">
     <title>Document</title>
 </head>
 
@@ -22,20 +22,20 @@
         <section class="main-section">
             <img class="header-image" src="../assets/alchemy-logo.png"/>
             <h2>
-                Products
+                Items
             </h2>
             <nav><a href="../index.html">Home</a></nav>
         </section>
         <section>
-            <ul class="products-list">
+            <ul class="item-list">
                 <li class="list-item">
-                    <p class="product-id">ID: 1</p>
-                    <p class="product-name">Crested Fluffel</p>
+                    <p class="item-id">ID: 1</p>
+                    <h3 class="item-name">Crested Fluffel</h3>
                     <img src="../assets/images/crested-fluffel.jpg" alt="crested fluffel flower">
-                    <p class="product-description">The Crested Fluffel is very rare.</p>
-                    <p class="product-magic">Fragrant? Yes.</p>
-                    <p class="product-safety">Safety notes: Sniff in moderation.</p>
-                    <button value="1" class="product-price">€10</button>
+                    <p class="item-description">The Crested Fluffel is very rare.</p>
+                    <p class="item-fragrant">Fragrant? Yes.</p>
+                    <p class="item-safety">Safety notes: Sniff in moderation.</p>
+                    <button value="1" class="item-price">€10</button>
                 </li>
             </ul>
         </section>
