--- a/items/items.html
+++ b/items/items.html
@@ -31,7 +31,7 @@
                 <li class="list-item">
                     <p class="item-id">ID: 1</p>
                     <h3 class="item-name">Crested Fluffel</h3>
-                    <img src="../assets/images/crested-fluffel.jpg" alt="crested fluffel flower">
+                    <img class="item-image" src="../assets/images/crested-fluffel.jpg" alt="crested fluffel flower">
                     <p class="item-description">The Crested Fluffel is very rare.</p>
                     <p class="item-fragrant">Fragrant? Yes.</p>
                     <p class="item-safety">Safety notes: Sniff in moderation.</p>
