wraps up items page render

--- a/items/items.html
+++ b/items/items.html
@@ -27,16 +27,7 @@
             <nav><a href="../index.html">Home</a></nav>
         </section>
         <section>
-            <ul class="item-list">
-                <li class="list-item">
-                    <p class="item-id">ID: 1</p>
-                    <h3 class="item-name">Crested Fluffel</h3>
-                    <img class="item-image" src="../assets/images/crested-fluffel.jpg" alt="crested fluffel flower">
-                    <p class="item-description">The Crested Fluffel is very rare.</p>
-                    <p class="item-fragrant">Fragrant? Yes.</p>
-                    <p class="item-safety">Safety notes: Sniff in moderation.</p>
-                    <button value="1" class="item-price">€10</button>
-                </li>
+            <ul id="item-list" class="item-list">
             </ul>
         </section>
     </main>
@@ -44,7 +35,7 @@
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="items.js"></script>
 </body>
 
 </html>
