fixes path error

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>
                 Flower Shop
             </h2>
-            <nav><a href="./Items/Items.html">Items</a></nav>
+            <nav><a href="./items/items.html">Items</a></nav>
             <content>
 
             </content>
