--- a/items/items.html
+++ b/items/items.html
@@ -20,11 +20,11 @@
     </header>
     <main>
         <section class="main-section">
-            <img class="header-image" src="../assets/alchemy-logo.png"/>
-            <h2>
-                Items
+            <img class="header-image" src="../assets/images/header-image.jpg"/>
+            <h2 class="page-title">
+                Available Items
             </h2>
-            <nav><a href="../index.html">Home</a></nav>
+            <nav class="navigation"><a href="../index.html">Home</a></nav>
         </section>
         <section>
             <ul id="item-list" class="item-list">
