sets up shopping cart file structure and static cart items

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <h2>
                 Flower Shop
             </h2>
-            <nav><a href="./items/items.html">Items</a></nav>
+            <nav>
+                <a href="./items/">Items</a>
+                <a href="./shopping-cart/">Shopping Cart</a>
+            </nav>
             <content>
 
             </content>
