--- a/items/index.html
+++ b/items/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../common/reset.css">
     <link rel="stylesheet" href="../common/main.css">
     <link rel="stylesheet" href="../styles/items.css">
-    <title>Document</title>
+    <title>Available Items</title>
 </head>
 
 <body>
@@ -24,7 +24,10 @@
             <h2 class="page-title">
                 Available Items
             </h2>
-            <nav class="navigation"><a href="../index.html">Home</a></nav>
+            <nav class="navigation">
+                <a href="../">Home</a>
+                <a href="../shopping-cart/">Shopping Cart</a>
+            </nav>
         </section>
         <section>
             <ul id="item-list" class="item-list">
