generates shopping cart

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -36,15 +36,16 @@
                     <th>Quantity</th>
                     <th>Price</th>
                 </tr>
-                <tr>
+                <tbody>
+                <!-- <tr>
                     <td>
                         <img src="../assets/images/crested-fluffel.jpg" alt="Fluted Yodel">
                     </td>
                     <td>Fluted Yodel</td>
                     <td>3</td>
                     <td>€30</td>
-                </tr>
-                <tr>
+                </tr> -->
+                <!-- <tr>
                     <td>
                         <img src="../assets/images/cragged-fallpop.jpg" alt="Cragged Fallpop">
                     </td>
@@ -59,7 +60,8 @@
                     <td>Fluted Yodel</td>
                     <td>1</td>
                     <td>€10</td>
-                </tr>
+                </tr> -->
+                </tbody>
                 <tr class="total-row">
                     <td></td>
                     <td></td>
