--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -66,7 +66,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>Order Total: $70</td>
+                    <td id="order-total"></td>
                 </tr>
               </table>
               <button>Place Order</button>
