--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./common/reset.css">
     <link rel="stylesheet" href="./common/main.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
     <title>Plant Shop</title>
 </head>
 
@@ -20,13 +23,12 @@
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png"/>
-            <h2>
+            <img class="header-image" src="assets/images/main-header.jpg"/>
+            <h2 class="page-title">
                 Flower Shop
             </h2>
             <nav>
-                <a href="./items/">Items</a>
-                <a href="./shopping-cart/">Shopping Cart</a>
+                <a class="link" href="./items/">Available Items</a>
             </nav>
             <content>
 
