--- a/items/index.html
+++ b/items/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../common/reset.css">
     <link rel="stylesheet" href="../common/main.css">
     <link rel="stylesheet" href="../styles/items.css">
+    <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
     <title>Available Items</title>
 </head>
 
@@ -22,7 +23,7 @@
         <section class="main-section">
             <img class="header-image" src="../assets/images/header-image.jpg"/>
             <h2 class="page-title">
-                Available Items
+                Available<br>Items
             </h2>
             <nav class="navigation">
                 <a href="../">Home</a>
