--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../common/reset.css">
     <link rel="stylesheet" href="../common/main.css">
     <link rel="stylesheet" href="../styles/shopping-cart.css">
+    <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
     <title>Shopping Cart</title>
 </head>
 <body>
@@ -37,30 +38,6 @@
                     <th>Price</th>
                 </tr>
                 <tbody>
-                <!-- <tr>
-                    <td>
-                        <img src="../assets/images/crested-fluffel.jpg" alt="Fluted Yodel">
-                    </td>
-                    <td>Fluted Yodel</td>
-                    <td>3</td>
-                    <td>€30</td>
-                </tr> -->
-                <!-- <tr>
-                    <td>
-                        <img src="../assets/images/cragged-fallpop.jpg" alt="Cragged Fallpop">
-                    </td>
-                    <td>Cragged Fallpop</td>
-                    <td>2</td>
-                    <td>€30</td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="../assets/images/fluted-yodel.jpg" alt="Fluted Yodel">
-                    </td>
-                    <td>Fluted Yodel</td>
-                    <td>1</td>
-                    <td>€10</td>
-                </tr> -->
                 </tbody>
                 <tr class="total-row">
                     <td></td>
