more css futzing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="main-section">
             <img class="header-image" src="assets/images/main-header.jpg"/>
             <h2 class="page-title">
-                Flower Shop
+                Flower<br>Shop
             </h2>
             <nav>
                 <a class="link" href="./items/">Available Items</a>
