--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -26,10 +26,10 @@
             </h2>
             <nav class="navigation">
                 <a href="../">Home</a>
-                <a href="../items/">Items</a>
+                <a href="../items/">Available Items</a>
             </nav>
         </section>
-        <section>
+        <section class="table-container">
             <table>
                 <tr class="cart-header-row">
                     <th></th>
@@ -41,9 +41,9 @@
                 </tbody>
                 <tr class="total-row">
                     <td></td>
+                    <td colspan="3" id="order-total"></td>
                     <td></td>
                     <td></td>
-                    <td id="order-total"></td>
                 </tr>
               </table>
               <button>Place Order</button>
