wraps up pretend  place order functionality

--- a/items/index.html
+++ b/items/index.html
@@ -27,7 +27,7 @@
             </h2>
             <nav class="navigation">
                 <a href="../">Home</a>
-                <a href="../shopping-cart/">Shopping Cart</a>
+                <a id="cart-link" href="../shopping-cart/">View Cart</a>
             </nav>
         </section>
         <section>
@@ -39,7 +39,7 @@
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
-    <script type="module" src="items.js"></script>
+    <script type="module" src="./items.js"></script>
 </body>
 
 </html>
