wraps up this iteration

--- a/items/index.html
+++ b/items/index.html
@@ -27,7 +27,7 @@
             </h2>
             <nav class="navigation">
                 <a href="../">Home</a>
-                <a id="cart-link" href="../shopping-cart/">View Cart</a>
+                <a id="cart-link" href="../shopping-cart/">View Cart <span id="items-in-cart"></span></a>
             </nav>
         </section>
         <section>
